--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>0.0.1</version>
 	</parent>
 	<artifactId>study</artifactId>
-	
+
 	<dependencies>
 		<!-- Toolkit -->
 		<dependency>
@@ -16,6 +16,15 @@
 			<artifactId>toolkit</artifactId>
 			<version>0.0.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+		</dependency>
 	</dependencies>
-	
+
 </project>
